--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.69.0",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "next": "15.1.4",
     "next-sanity": "^9.8.35",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "sanity": "^3.69.0",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
